--- a/.editorconfig
+++ b/.editorconfig
@@ -12,22 +12,12 @@
 # the License.
 #
 
-FROM alpine
+root = true
 
-ENV USER jeqo
-ENV VERSION master-SNAPSHOT
-
-WORKDIR /zipkin
-
-RUN apk add curl unzip && \
-  curl -SL https://jitpack.io/com/github/${USER}/zipkin-forwarder/zipkin-forwarder-http-autoconfigure/${VERSION}/zipkin-forwarder-http-autoconfigure-${VERSION}-module.jar > forwarder.jar && \
-  echo > .forwarder_profile && \
-  unzip forwarder.jar -d forwarder && \
-  rm forwarder.jar
-
-FROM openzipkin/zipkin:2.16.2
-
-COPY --from=0  --chown=zipkin /zipkin/ /zipkin/
-
-ENV MODULE_OPTS="-Dloader.path=forwarder -Dspring.profiles.active=http-forwarder"
-ENV STORAGE_TYPE=http-forwarder
+[*]
+charset = utf-8
+end_of_line = lf
+indent_style = space
+indent_size = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
