--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2019 Jorge Esteban Quilcate Otoya
+    Copyright 2019 The OpenZipkin Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -17,12 +17,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.github.jeqo.zipkin</groupId>
-    <artifactId>zipkin-forwarder-parent</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
+    <artifactId>zipkin-storage-forwarder-parent</artifactId>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zipkin-forwarder-autoconfigure</artifactId>
+  <artifactId>zipkin-storage-forwarder-autoconfigure</artifactId>
+  <name>Auto Configuration: Forwarder Storage</name>
+
   <packaging>pom</packaging>
 
   <modules>
@@ -41,40 +43,75 @@
       <version>${spring-boot.version}</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-configuration-processor</artifactId>
-      <version>${spring-boot.version}</version>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-autoconfigure-processor</artifactId>
-      <version>${spring-boot.version}</version>
-      <optional>true</optional>
-    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
       <version>${spring-boot.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>${armeria.groupId}</groupId>
+      <artifactId>armeria</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-maven-plugin</artifactId>
-          <configuration>
-            <!-- https://github.com/spring-projects/spring-boot/issues/3426 transitive exclude doesn't work -->
-            <excludeGroupIds>
-              io.zipkin.zipkin2,org.springframework.boot,org.springframework,com.fasterxml.jackson.core,com.google.auto.value,com.google.gson
-            </excludeGroupIds>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <layoutFactory implementation="zipkin.layout.ZipkinLayoutFactory">
+            <name>zipkin</name>
+          </layoutFactory>
+          <classifier>module</classifier>
+          <!-- https://github.com/spring-projects/spring-boot/issues/3426 transitive exclude doesn't work -->
+          <!--
+          Not excluding guava right now eventhough there is an overlap to avoid the following conflict
+
+          java.lang.NoSuchMethodError: com.google.common.base.Preconditions.checkArgument(ZLjava/lang/String;CLjava/lang/Object;)V
+             at io.grpc.Metadata$Key.validateName(Metadata.java:629) ~[grpc-core-1.20.0.jar!/:1.20.0]
+          -->
+          <excludeGroupIds>
+            ${zipkin.groupId},org.springframework.boot,org.springframework,com.fasterxml.jackson.core,com.google.auto.value,com.google.code.gson,org.reactivestreams,com.google.code.findbugs,javax.annotation,org.slf4j,io.netty,io.micrometer,org.hdrhistogram,org.latencyutils,org.apache.logging.log4j,com.github.luben,org.lz4,org.xerial.snappy
+          </excludeGroupIds>
+          <!-- currently cannot exclude io.opencensus due to https://github.com/googleapis/google-http-java-client/issues/621 -->
+          <excludes>
+            <!-- zipkin-server depends on armeria-->
+            <exclude>
+              <groupId>${armeria.groupId}</groupId>
+              <artifactId>armeria</artifactId>
+            </exclude>
+            <!-- See https://github.com/line/armeria/issues/1679 -->
+            <exclude>
+              <groupId>net.bytebuddy</groupId>
+              <artifactId>byte-buddy</artifactId>
+            </exclude>
+            <!-- zipkin-server depends on kafka-clients-->
+            <exclude>
+              <groupId>org.apache.kafka</groupId>
+              <artifactId>kafka-clients</artifactId>
+            </exclude>
+          </excludes>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>io.zipkin.layout</groupId>
+            <artifactId>zipkin-layout-factory</artifactId>
+            <version>0.0.5</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
   </build>
 </project>
