--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2019 Jorge Esteban Quilcate Otoya
+    Copyright 2019 The OpenZipkin Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -17,18 +17,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.github.jeqo.zipkin</groupId>
-    <artifactId>zipkin-forwarder-parent</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
+    <artifactId>zipkin-storage-forwarder-parent</artifactId>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zipkin-forwarder-core</artifactId>
+  <artifactId>zipkin-storage-forwarder-core</artifactId>
+  <name>Zipkin Storage Forwarder</name>
 
   <properties>
     <main.basedir>${project.basedir}/..</main.basedir>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>${zipkin.groupId}</groupId>
+      <artifactId>zipkin</artifactId>
+      <version>${zipkin.version}</version>
+    </dependency>
     <dependency>
       <groupId>io.zipkin.reporter2</groupId>
       <artifactId>zipkin-reporter</artifactId>
