--- a/http/pom.xml
+++ b/http/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2019 Jorge Esteban Quilcate Otoya
+    Copyright 2019 The OpenZipkin Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -14,15 +14,18 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.github.jeqo.zipkin</groupId>
-    <artifactId>zipkin-forwarder-parent</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
+    <artifactId>zipkin-storage-forwarder-parent</artifactId>
+    <version>0.2.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>zipkin-forwarder-http</artifactId>
+  <artifactId>zipkin-storage-forwarder-http</artifactId>
+  <name>Zipkin Storage Forwarder: HTTP</name>
 
   <properties>
     <main.basedir>${project.basedir}/..</main.basedir>
@@ -34,21 +37,13 @@
       <artifactId>zipkin-sender-okhttp3</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.github.jeqo.zipkin</groupId>
-      <artifactId>zipkin-forwarder-core</artifactId>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>zipkin-storage-forwarder-core</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- for test containers -->
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
