--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2019 Jorge Esteban Quilcate Otoya
+    Copyright 2019 The OpenZipkin Authors
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
     in compliance with the License. You may obtain a copy of the License at
@@ -17,9 +17,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.github.jeqo.zipkin</groupId>
-  <artifactId>zipkin-forwarder-parent</artifactId>
-  <version>0.1.3-SNAPSHOT</version>
+  <groupId>io.zipkin.contrib.zipkin-storage-forwarder</groupId>
+  <artifactId>zipkin-storage-forwarder-parent</artifactId>
+  <version>0.2.0-SNAPSHOT</version>
+
+  <packaging>pom</packaging>
 
   <modules>
     <module>core</module>
@@ -28,12 +30,56 @@
     <module>kafka</module>
   </modules>
 
-  <packaging>pom</packaging>
+  <distributionManagement>
+    <repository>
+      <id>bintray</id>
+      <url>https://api.bintray.com/maven/openzipkin/maven/brave/;publish=1</url>
+    </repository>
+    <snapshotRepository>
+      <id>jfrog-snapshots</id>
+      <url>https://oss.jfrog.org/artifactory/oss-snapshot-local</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <issueManagement>
+    <system>Github</system>
+    <url>https://github.com/openzipkin-contrib/zipkin-storage-forwarder/issues</url>
+  </issueManagement>
 
   <name>Zipkin Forwarder (Parent)</name>
   <description>A Zipkin Span Consumer based on existing Reporters to pipeline tracing data between servers</description>
-  <url>http://github.com/jeqo/zipkin-span-consumer-reporter</url>
+  <url>http://github.com/openzipkin-contrib/zipkin-storage-reporter</url>
   <inceptionYear>2019</inceptionYear>
+
+  <organization>
+    <name>OpenZipkin</name>
+    <url>https://zipkin.io/</url>
+  </organization>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:ssh://git@github.com/openzipkin-contrib/zipkin-storage-forwarder.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/openzipkin-contrib/zipkin-storage-forwarder.git
+    </developerConnection>
+    <url>http://github.com/openzipkin-contrib/zipkin-storage-forwarder/tree/master</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
+  <developers>
+    <developer>
+      <id>openzipkin</id>
+      <name>OpenZipkin Gitter</name>
+      <url>https://gitter.im/openzipkin/zipkin</url>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,31 +87,34 @@
 
     <main.basedir>${project.basedir}</main.basedir>
 
-    <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
-    <zipkin.version>2.16.2</zipkin.version>
-    <brave.version>5.6.11</brave.version>
-    <log4j.version>2.11.2</log4j.version>
+    <!-- groupId overrinds allow testing feature branches with jitpack -->
+    <zipkin.groupId>io.zipkin.zipkin2</zipkin.groupId>
+    <zipkin.version>2.17.1</zipkin.version>
+    <armeria.groupId>com.linecorp.armeria</armeria.groupId>
+    <armeria.version>0.94.0</armeria.version>
+    <spring-boot.version>2.1.9.RELEASE</spring-boot.version>
+    <brave.version>5.8.0</brave.version>
 
-    <testcontainers.version>1.11.2</testcontainers.version>
-    <junit.version>4.12</junit.version>
-    <assertj.version>3.11.1</assertj.version>
+    <log4j.version>2.12.1</log4j.version>
+    <junit-jupiter.version>5.5.2</junit-jupiter.version>
+    <testcontainers.version>1.12.1</testcontainers.version>
+    <assertj.version>3.13.2</assertj.version>
+
+    <!-- override to set exclusions per-project -->
+    <errorprone.args />
+    <errorprone.version>2.3.3</errorprone.version>
+
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
+    <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+    <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
+    <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
+    <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+    <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+    <license-maven-plugin.version>3.0</license-maven-plugin.version>
   </properties>
-
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-
-  <developers>
-    <developer>
-      <id>jeqo</id>
-      <name>Jorge Esteban Quilcate Otoya</name>
-      <url>https://github.com/jeqo</url>
-    </developer>
-  </developers>
 
   <dependencyManagement>
     <dependencies>
@@ -78,17 +127,17 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>zipkin-forwarder-core</artifactId>
+        <artifactId>zipkin-storage-forwarder-core</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>zipkin-forwarder-kafka</artifactId>
+        <artifactId>zipkin-storage-forwarder-kafka</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>zipkin-forwarder-http</artifactId>
+        <artifactId>zipkin-storage-forwarder-http</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -101,28 +150,56 @@
         <artifactId>kafka</artifactId>
         <version>${testcontainers.version}</version>
       </dependency>
+      <dependency>
+        <groupId>${armeria.groupId}</groupId>
+        <artifactId>armeria</artifactId>
+        <version>${armeria.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
+    <!-- Zipkin server uses log4j 2 -->
     <dependency>
-      <groupId>io.zipkin.zipkin2</groupId>
-      <artifactId>zipkin</artifactId>
-      <version>${zipkin.version}</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4j.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>io.zipkin.zipkin2</groupId>
-      <artifactId>zipkin-tests</artifactId>
-      <version>${zipkin.version}</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit-jupiter.version}</version>
       <scope>test</scope>
-      <version>${junit.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!--
+    Current versions of JUnit5 provide the above junit-jupiter artifact for convenience but we may
+    still have transitive dependencies on these older artifacts and have to make sure they're all
+    using the same version.
+    -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
@@ -141,63 +218,64 @@
           <artifactId>maven</artifactId>
           <version>0.7.6</version>
           <configuration>
-            <maven>3.6.1</maven>
+            <maven>3.6.2</maven>
           </configuration>
         </plugin>
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>${maven-compiler-plugin.version}</version>
           <inherited>true</inherited>
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
             <showWarnings>true</showWarnings>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-maven-plugin</artifactId>
-          <version>${spring-boot.version}</version>
           <executions>
             <execution>
+              <!-- only use errorprone on main source tree -->
+              <id>default-compile</id>
+              <phase>compile</phase>
               <goals>
-                <goal>repackage</goal>
+                <goal>compile</goal>
               </goals>
+              <configuration>
+                <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                <compilerArgs>
+                  <arg>-XDcompilePolicy=simple</arg>
+                  <arg>-Xplugin:ErrorProne ${errorprone.args}</arg>
+                </compilerArgs>
+                <annotationProcessorPaths>
+                  <processorPath>
+                    <groupId>com.google.errorprone</groupId>
+                    <artifactId>error_prone_core</artifactId>
+                    <version>${errorprone.version}</version>
+                  </processorPath>
+                </annotationProcessorPaths>
+              </configuration>
             </execution>
           </executions>
-          <configuration>
-            <layoutFactory implementation="zipkin.layout.ZipkinLayoutFactory">
-              <name>zipkin</name>
-            </layoutFactory>
-            <classifier>module</classifier>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.apache.zipkin.layout</groupId>
-              <artifactId>zipkin-layout-factory</artifactId>
-              <version>0.0.5</version>
-            </dependency>
-          </dependencies>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${maven-jar-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
 
     <plugins>
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.0</version>
-      </plugin>
-
-      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>${maven-failsafe-plugin.version}</version>
       </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.1</version>
+        <version>${maven-failsafe-plugin.version}</version>
         <executions>
           <execution>
+            <id>integration-test</id>
+            <phase>verify</phase>
             <goals>
               <goal>integration-test</goal>
               <goal>verify</goal>
@@ -206,21 +284,53 @@
         </executions>
       </plugin>
 
+      <!-- Ensure no Java 9+ api usage -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>animal-sniffer-maven-plugin</artifactId>
+        <version>1.18</version>
+        <configuration>
+          <signature>
+            <groupId>org.codehaus.mojo.signature</groupId>
+            <artifactId>java18</artifactId>
+            <version>1.0</version>
+          </signature>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <artifactId>maven-install-plugin</artifactId>
-        <version>2.5.2</version>
+        <version>${maven-install-plugin.version}</version>
       </plugin>
 
       <!-- Uploads occur as a last step (which also adds checksums) -->
       <plugin>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>${maven-deploy-plugin.version}</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>${maven-release-plugin.version}</version>
+        <configuration>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <!-- to match zipkin-scala (openzipkin/zipkin) -->
+          <tagNameFormat>@{project.version}</tagNameFormat>
+        </configuration>
       </plugin>
 
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>3.0</version>
+        <version>${license-maven-plugin.version}</version>
         <configuration>
           <header>${main.basedir}/src/etc/header.txt</header>
           <mapping>
@@ -230,6 +340,7 @@
           <excludes>
             <exclude>.travis.yml</exclude>
             <exclude>.gitignore</exclude>
+            <exclude>.editorconfig</exclude>
             <exclude>.mvn/**</exclude>
             <exclude>mvnw*</exclude>
             <exclude>etc/header.txt</exclude>
@@ -238,8 +349,8 @@
             <exclude>**/*.md</exclude>
             <exclude>src/test/resources/**</exclude>
             <exclude>src/main/resources/**</exclude>
+            <exclude>**/*.puml</exclude>
             <exclude>Makefile</exclude>
-            <exclude>Dockerfile*</exclude>
           </excludes>
           <strictCheck>true</strictCheck>
         </configuration>
@@ -247,7 +358,7 @@
           <dependency>
             <groupId>com.mycila</groupId>
             <artifactId>license-maven-plugin-git</artifactId>
-            <version>3.0</version>
+            <version>${license-maven-plugin.version}</version>
           </dependency>
         </dependencies>
         <executions>
@@ -259,30 +370,68 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>${maven-enforcer-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>enforce-java</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireJavaVersion>
+                  <version>[11,12)</version>
+                </requireJavaVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
-  <issueManagement>
-    <system>Github</system>
-    <url>https://github.com/jeqo/zipkin-forwarder/issues</url>
-  </issueManagement>
-
-  <scm>
-    <connection>scm:git:ssh://git@github.com/jeqo/zipkin-forwarder.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/jeqo/zipkin-forwarder.git
-    </developerConnection>
-    <url>http://github.com/jeqo/zipkin-forwarder/tree/master</url>
-    <tag>HEAD</tag>
-  </scm>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <!-- Creates source jar -->
+          <plugin>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>${maven-source-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- Creates javadoc jar -->
+          <plugin>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>${maven-javadoc-plugin.version}</version>
+            <configuration>
+              <failOnError>false</failOnError>
+              <!-- hush pedantic warnings: we don't put param and return on everything! -->
+              <doclint>none</doclint>
+            </configuration>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
